RESOLVED FIXED247507
Replaced elements with intrinsic ratio and missing size don't respect min-max constraints
https://bugs.webkit.org/show_bug.cgi?id=247507
Summary Replaced elements with intrinsic ratio and missing size don't respect min-max...
Sammy Gill
Reported 2022-11-04 15:57:37 PDT
Created attachment 463413 [details] Testcase If a replaced element (e.g. SVG) has an intrinsic size in only one dimension, an intrinsic ratio, and min/max constraints in the other dimension, those constraints must be met using the intrinsic ratio. Attached 2 examples.
Attachments
Testcase (836 bytes, text/html)
2022-11-04 15:57 PDT, Sammy Gill
no flags
Testcase 2 (834 bytes, text/html)
2022-11-04 15:58 PDT, Sammy Gill
no flags
Sammy Gill
Comment 1 2022-11-04 15:58:05 PDT
Created attachment 463414 [details] Testcase 2
Radar WebKit Bug Importer
Comment 2 2022-11-04 15:58:31 PDT
Sammy Gill
Comment 3 2022-11-04 16:41:05 PDT
Sammy Gill
Comment 4 2022-11-04 17:11:46 PDT
Sammy Gill
Comment 5 2022-11-04 17:28:59 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/36830
EWS
Comment 6 2022-12-06 14:30:53 PST
Committed 257434@main (036e53a548a5): <https://commits.webkit.org/257434@main> Reviewed commits have been landed. Closing PR #6159 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.